feat: add test to test the save and modify sql test script to set the incremental id.